[package]
categories = ["command-line-utilities", "ci", "development-tools"]
description = "A simple JSON server written in Rust"
edition = "2024"
keywords = ["json", "server", "rust"]
license = "MIT"
name = "json-server-rs"
repository = "github.com/mozart409/json-server-rs"
version = "0.1.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
axum-macros = "0.3.6"
clap = {version = "4.1.8", features = ["derive"]}
fs-err = "2.9.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
tokio = {version = "1.26.0", features = ["full"]}
tower = {version = "0.4", features = ["full"]}
tower-http = {version = "0.4.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
