[package]
categories = ["command-line-utilities", "ci", "development-tools"]
description = "A simple JSON server written in Rust"
edition = "2024"
keywords = ["json", "server", "rust"]
license = "MIT"
name = "json-server-rs"
repository = "github.com/mozart409/json-server-rs"
version = "0.1.1"

[dependencies]
axum = "0.8.8"
axum-macros = "0.5.0"
clap = { version = "4.5.23", features = ["derive"] }
fs-err = "3.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.41.1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
color-eyre = "0.6.3"

[dev-dependencies]
tempfile = "3.14.0"
axum-test = "17.0.1"
